--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,14 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
+    <android:uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,6 +30,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-</application>
+        <activity
+            android:name="com.hsoftware.cardboard_remoteview.screen"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_screen"
+            android:theme="@style/FullscreenTheme" >
+        </activity>
+    </application>
 
 </manifest>
